# finalproject_shitova_natalia

./: README.md  pyproject.toml
data/: portfolios.json  rates.json  users.json
valutatrade_hub/: logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: database.py  settings.py
