[tool.poetry]
name = "finalproject-shitova-natalia"
version = "0.1.0"
description = ""
authors = ["Shpinat-developer <dzeshnik@mail.ru>"]
readme = "README.md"
packages = [
    { include = "valutatrade_hub" },
]

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "valutatrade_hub.cli.interface:main"

[tool.valutatrade]
data_dir = "data"
rates_ttl_seconds = 300
base_currency = "USD"
logs_dir = "logs"
log_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
